<resources>
    <string name="app_name">DexDemo</string>
    <string name="action_settings">Settings</string>
</resources>
