<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.czy.rectlayout.MainActivity">

    <com.czy.rectlayout.RectLayout2
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:paddingTop="50dp"
        app:bottomTxt="bottom"
        app:rectBg="@drawable/rect"
        app:topTxt="title"
        app:txtColor="@color/red"
        app:txtSize="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="asd"/>

    </com.czy.rectlayout.RectLayout2>

</RelativeLayout>
